--- a/styles/layout.css
+++ b/styles/layout.css
@@ -107,7 +107,7 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 /* ------Statistic-----*/
 /* Turned off for header font */
 /* h1{font-family: 'Aharoni', sans-serif; text-align: center; margin:0; padding:0; font-size:28px; font-weight:bold; font-style:normal; line-height:normal;} */
-#mid_text{font-family: 'Times New Roman', serif; text-align: center; margin:0; padding:0; font-size:28px; font-weight:lighter; font-style:normal; line-height:normal; margin: 20px;}
+#mid_text{font-family: 'gill sans', sans-serif; text-align: center; margin:0; padding:0; font-size:28px; font-weight:normal; font-style:normal; line-height:normal; margin: 20px;}
 
 /* mid-container */
 .mid-container {
@@ -140,14 +140,45 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 
 /*----------------------------------------------Footer-------------------------------------*/
 
-#footer{padding:30px 0; font-size:12px; line-height:1.4em;}
-
-#footer section h2.title{margin:0 0 25px 0; padding:0; color:#FFFFFF; background-color:#475734; font-size:12px; font-weight:bold; text-transform:uppercase;}
-
-#footer section nav li{margin:0 0 5px 0; padding:0 0 5px 0; border-bottom:1px solid #475734;}
-#footer section nav li.last{margin:0;}
-
-/*----------------------------------------------Copyright-------------------------------------*/
-
-#copyright{padding:20px 0;}
-#copyright p{margin:0; padding: 0;}
+.footer-basic {
+    padding:40px 0;
+    background-color:#ffffff;
+    color:#000000;
+  }
+  
+  .footer-basic ul {
+    list-style: none;
+    padding:0;
+    list-style:none;
+    text-align:center;
+    font-size:15px;
+    line-height:1.6;
+    margin-bottom:0;
+  }
+  
+  .footer-basic li {
+    display: inline;
+    padding:0 5px 20px 5px;
+  }
+  
+  .footer-basic ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  
+  .footer-basic ul a:hover {
+    opacity:1;
+  }
+  
+  .footer-basic .image {
+      margin: 20px 658px 20px;
+  }
+  
+  .footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:12px;
+    color:#000000;
+    margin-bottom:0;
+  }
